--- a/utils/k8s-upgrade/roles/upgrade-manager/tasks/manager-upgrade.yml
+++ b/utils/k8s-upgrade/roles/upgrade-manager/tasks/manager-upgrade.yml
@@ -33,7 +33,7 @@
       changed_when: upgrade_plan_register.rc != 0
 
     - name: "Upgrade Manager Node Packages with version {{ item }}"
-      ansible.builtin.yum:
+      ansible.builtin.dnf:
         name: "{{ item }}"
         disable_excludes: kubernetes
         update_cache: true
